Added web stuff and restructured
-Added static ExpressJS handler
-Added Websocket server
-Rewrote some of the commands to now return their result string instead
of printing to the console, so the results can be set over the websocket

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jean-Luc Roberts",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "express": "^4.15.2",
     "rcon": "git+https://github.com/tehbeard/node-rcon.git",
     "ws": "^2.2.1",
     "xmldom": "^0.1.27"
